fix budget print cut off and image stretch

--- a/apps/budget-tool/src/app/components/card/card-image/budget-card-image.scss
+++ b/apps/budget-tool/src/app/components/card/card-image/budget-card-image.scss
@@ -18,6 +18,7 @@
 img.card-image {
   object-fit: contain;
   width: 100%;
+  max-width: 65px;
   height: 100%;
   max-height: 65px;
 }
